--- a/Node-Server/package.json
+++ b/Node-Server/package.json
@@ -4,6 +4,7 @@
   "description": "my first socket.io app",
   "dependencies": {
     "axios": "^0.22.0",
+    "body-parser": "^1.19.1",
     "express": "^4.17.1",
     "multer": "^1.4.3",
     "socket.io": "^4.1.2"
